--- a/mingus/requirements.txt
+++ b/mingus/requirements.txt
@@ -13,7 +13,7 @@ django-robots==0.6.1
 
 -e git+git://github.com/django-extensions/django-extensions.git#egg=django_extensions
 
--e git+git://github.com/montylounge/django-basic-apps.git#egg=basic
+-e git+git://github.com/acdha/django-basic-apps.git#egg=basic
 -e git+git://github.com/zerok/django-flatblocks.git#egg=flatblocks
 -e git+git://github.com/montylounge/django-disqus.git#egg=disqus
 -e svn+http://django-navbar.googlecode.com/svn/trunk#egg=navbar
@@ -29,7 +29,7 @@ django-robots==0.6.1
 -e hg+https://bitbucket.org/kmike/django-view-cache-utils/#egg=view_cache_utils
 -e hg+https://bitbucket.org/ubernostrum/django-contact-form/#egg=contact_form
 -e git+git://github.com/sunlightlabs/django-honeypot.git#egg=honeypot
--e git+git://github.com/montylounge/django-sugar.git#egg=sugar
+-e git+git://github.com/acdha/django-sugar.git#egg=sugar
 -e git+git://github.com/montylounge/django-quoteme.git#egg=quoteme
 
 -e hg+http://bitbucket.org/jezdez/django-staticfiles/#egg=django-staticfiles
