Change django version to 1.2.1

--- a/mingus/requirements.txt
+++ b/mingus/requirements.txt
@@ -1,6 +1,6 @@
 BeautifulSoup
 python-dateutil==1.4.1
-django
+django==1.2.1
 django-debug-toolbar==0.8.1
 django-tagging==0.3
 Pygments==1.1.1
@@ -42,9 +42,3 @@ django-robots==0.6.1
 django-dbtemplates==0.6.1
 django-memcache-status==1.0.1
 -e git+git://github.com/kylef/django-request.git#egg=django-request
-
-
-
-
-
-
