--- a/mingus/local_settings.py.template
+++ b/mingus/local_settings.py.template
@@ -14,12 +14,24 @@ MANAGERS = (
     ('fooper','fooper@foo'),
 )
 
-DATABASE_ENGINE = 'sqlite3'           # 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
-DATABASE_NAME = 'dev.db'             # Or path to database file if using sqlite3.
-DATABASE_USER = ''             # Not used with sqlite3.
-DATABASE_PASSWORD = ''         # Not used with sqlite3.
-DATABASE_HOST = ''             # Set to empty string for localhost. Not used with sqlite3.
-DATABASE_PORT = ''             # Set to empty string for default. Not used with sqlite3.
+#DATABASES = {                                                                                                           
+    #'default': {
+        #'NAME': 'dbmingus',
+        #'ENGINE': 'mysql',
+        #'USER': 'umingus',
+        #'PASSWORD': '',
+        #'HOST': 'mingus',
+        #'PORT': '3306',
+        #'OPTIONS': { "init_command": "SET FOREIGN_KEY_CHECKS = 0", "init_command": "SET storage_engine=INNODB",},
+    #}
+#}
+
+DATABASES = {
+    'default': {
+        'NAME': 'dev.db',
+        'ENGINE': 'sqlite3',
+    }
+}
 
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
